so many things lol

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,22 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="asikuma, ghana, maternal, health, maternal health, 
+    <meta
+      name="keywords"
+      content="asikuma, ghana, maternal, health, maternal health, 
       mHealth, Ghana Health Services, GHS, baby, mother, pregnancy, birth, app, application, MAAME, BYU, 
       Brigham Young University, child, nurse, hospital, community health, nonprofit, 
       healthcare, innovation, Ghanaian, social innovation, women's health, donate, donation,
       iPhone, android, app store, public health, preventative care, international health, global health,
       Naomi Rhondeau, Olivia Tuttle, Heather Lehnardt, Clay Coleman, Asia Whoolery, apple, maternal mortality,
-      infant mortality, prenatal, postnatal, reproductive health, prenatal care, postnatal care" />
-    <meta name="description" content="Maame is a mobile app that aims to reduce maternal mortality rates by providing 
-      tools to facilitate prenatal and postnatal care." />
-    
+      infant mortality, prenatal, postnatal, reproductive health, prenatal care, postnatal care"
+    />
+    <meta
+      name="description"
+      content="Maame is a mobile app that aims to reduce maternal mortality rates by providing 
+      tools to facilitate prenatal and postnatal care."
+    />
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
